# novel-archives-database

./: Cargo.toml  package-lock.json
crates/novel-archives-backend/: Cargo.toml
crates/novel-archives-backend/src/: lib.rs
crates/novel-archives-backend/src/domains/: id.rs  novel.rs
crates/novel-archives-database/: Cargo.toml
crates/novel-archives-database/src/: lib.rs
crates/novel-archives-database/src/domains/: mod.rs  novel.rs
crates/novel-archives-database/src/presentations/: mod.rs
crates/novel-archives-database/src/presentations/graphql/: mod.rs  novel.rs
crates/novel-archives-database/src/usecases/: mod.rs  novel.rs
