[package]
name = "novel-archives-database"
version = "0.1.0"
authors = ["qwerty2501 <939468+qwerty2501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 
[dependencies]
utils-rs = { git = "https://github.com/novel-archives/utils-rs" }
domain_utils_macro = { git = "https://github.com/novel-archives/domain_utils_macro" }
domain_utils = { git = "https://github.com/novel-archives/domain_utils" }
derive-new = "0.5.9"
derive-getters = "0.2.0"
async-graphql = { version = "3.0.11", features = ["dataloader"] }
async-trait = "0.1.51"
async-std = "1.10.0"
anyhow = "1.0.51"
thiserror = "1.0.30"
